# hjLabs.in_Candle

./: CLAUDE.md  CMakeLists.txt
src/cadcam/: CMakeLists.txt
src/cadcam/tests/: CMakeLists.txt
src/candle/: CMakeLists.txt  frmmain.cpp  frmmain.h  frmmain.ui  frmsettings.cpp  frmsettings.h  frmsettings.ui  main.cpp  styles.qrc
src/candle/drawers/: machinetabledrawer.cpp  machinetabledrawer.h
src/candle/styles/: frmmaindark.qss
src/candle/widgets/: glwidget.cpp
src/designerplugins/: CMakeLists.txt
src/designerplugins/cameraplugin/: CMakeLists.txt
src/designerplugins/customwidgetsplugin/: CMakeLists.txt
